# numpy-katas

./: .gitignore  Makefile  katas.ipynb  pyproject.toml  readme.md
docs/: Makefile  pyproject.toml
docs/source/: conf.py  index.rst  katas.linear.index.rst  katas.linear.rst  linear_models.rst
katas/: linear_regression.py  logistic_regression.py  tfidf.py
katas/linear/: __init__.py  linear_regression.py  logistic_regression.py
tests/test_linear/: test_linear_regression.py
