[tool.poetry]
name = "numpy-exercises"
version = "0.1.0"
description = ""
authors = ["Roman Glushko <roman.glushko.m@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
ipykernel = "^5.5.0"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
