[tool.poetry]
name = "numpy-exercises"
version = "0.1.0"
description = ""
authors = ["Roman Glushko <roman.glushko.m@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
ipykernel = "^5.5.0"
numpy = "^1.20.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.0"
flake8 = "^4.0.1"
black = "^21.10b0"
mypy = "^0.910"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
